--- a/apps/blog/templates/blog/author/article_create_form.html
+++ b/apps/blog/templates/blog/author/article_create_form.html
@@ -1,6 +1,6 @@
 {% extends "author_base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block title %}
     Create {{title}}
 {% endblock title %}
@@ -14,27 +14,8 @@
 {% endblock stylesheets %}
 
 {% block content %}
-<div class="header pb-2 mt-2" >
-  <div class="container-fluid">
-    <div class="header-body">
-      <div class="row align-items-center pt-2">
-        <div class="col-lg-6 col-7">
-          <!-- <h6 class="h2 d-inline-block mb-0">Default</h6> -->
-          <nav aria-label="breadcrumb" class="d-none d-md-inline-block ml-md-4">
-            <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
-              <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-              <li class="breadcrumb-item"><a href="#">Dashboards</a></li>
-              <li class="breadcrumb-item active" aria-current="page">{{title}}</li>
-            </ol>
-          </nav>
-        </div>
-       
-      </div>
-      <!-- Card stats -->
-   
-    </div>
-  </div>
-</div>
+
+{% include "includes/header_body.html" %}
     <div class="container">
     
         <div class="content-section">
@@ -47,44 +28,7 @@
                     <form method="POST" action="{% url 'blog:article_write' %}" id="articleForm" enctype="multipart/form-data"
                           novalidate>
                         {% csrf_token %}
-                              <div class="form-group">
-                                <label for="articleTitle">Article Title*</label>
-                                    <h6 class="text-danger">{{ article_create_form.title.errors }}</h6>
-                                    {{ article_create_form.title }}
-                              </div>
-                              <div class="form-group">
-                                <label for="articleCategory">Select Category*</label>
-                                  <h6 class="text-danger">{{ article_create_form.category.errors }}</h6>
-                                    {{ article_create_form.category }}
-                              </div>
-                              <div class="form-group">
-                                <label for="articleImage">Upload Article Image*</label>
-                                  <h6 class="text-danger">{{ article_create_form.image.errors }}</h6>
-                                    {{ article_create_form.image }}
-                              </div>
-                              <div class="form-group">
-                                <label for="image_credit">Image Credit</label>
-                                    <h6 class="text-danger">{{ article_create_form.image_credit.errors }}</h6>
-                                    {{ article_create_form.image_credit }}
-                              </div>
-                              <div class="form-group">
-                                  <label for="article-content">Content*</label>
-                                  <h6 class="text-danger">{{ article_create_form.body.errors }}</h6>
-                                  {{ article_create_form.body }}
-                              </div>
-                              <div class="form-group">
-                                <label for="articleTags">Enter Tags*</label>
-                                  <h6 class="text-danger">{{ article_create_form.tags.errors }}</h6>
-                                   {{ article_create_form.tags }}
-
-                              <small id="hint_id_tags" class="form-text text-muted">
-                                  A comma-separated list of tags.</small>
-                              </div>
-                              <div class="form-group">
-                                <label for="articleImage">Status*</label>
-                                  <h6 class="text-danger">{{ article_create_form.status.errors }}</h6>
-                                   {{ article_create_form.status }}
-                              </div>
+                             {{article_create_form|crispy}}
                             <div class="form-group float-right">
                                 <button type="reset" class="btn btn-danger">Reset Form</button>
                                 <button class="btn btn-dark" name="action"
