--- a/apps/blog/templates/blog/author/article_update_form.html
+++ b/apps/blog/templates/blog/author/article_update_form.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-    Update Article
+ {{title}}
 {% endblock title %}
 
 
@@ -15,13 +15,14 @@
 {% endblock stylesheets %}
 
 {% block content %}
+{% include "includes/header_body.html" %}
   {{ form.media }}
     <div class="container">
         <div class="content-section">
 
             <div class="card shadow-sm mb-3 w-100">
 
-              <h4 class="card-header">Update Article</h4>
+              <h4 class="card-header bg-primary text-white">{{title}}</h4>
 
                <div class="card-body">
 
