--- a/templates/includes/header_body.html
+++ b/templates/includes/header_body.html
@@ -11,7 +11,7 @@
               <nav aria-label="breadcrumb" class="d-none d-md-inline-block mr-md-2">
                 <ol class="breadcrumb breadcrumb-links breadcrumb-dark">
                   <li class="breadcrumb-item"><a href="#"><i class="fas fa-home"></i></a></li>
-                  <li class="breadcrumb-item"><a href="#">Dashboard</a></li>
+                  <li class="breadcrumb-item"><a href="{% url 'home:dashboard' %}">Dashboard</a></li>
                   <li class="breadcrumb-item active" aria-current="page">{{title}}</li>
                 </ol>
               </nav>
