--- a/apps/static/assets/css/blog/front-page-category/styles.css
+++ b/apps/static/assets/css/blog/front-page-category/styles.css
@@ -30,7 +30,7 @@ p{ line-height: 1.6; font-family: 'Maven Pro', sans-serif; font-weight: 400; col
 
 h1{ font-size: 4em; line-height: 1; }
 h2{ font-size: 2.8em; line-height: 1.1; }
-h3{ font-size: 2em; }
+h3{ font-size: 1.5em; }
 h4{ font-size: 1.2em; }
 h5{ font-size: 1.1em; }
 h6{ font-size: .9em; letter-spacing: 1px; }
@@ -132,18 +132,35 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 
 .menu-nav-icon{ display: none; height: 60px; width: 50px; text-align: center; line-height: 60px; cursor: pointer; 
 	position: absolute; right: 0; font-size: 1.8em; }
-	
+
 	
 
 /* ---------------------------------
 4. SLIDER
 --------------------------------- */
 
-.slider{ height: 400px; width: 100%; background-image: url(../../images/category-1.jpg); background-size: cover; }  
+.main-slider{ width: 100%; padding-right: 150px; }  
  
-.slider .title{ color: #fff; text-shadow: 2px 2px 10px rgba(0,0,0,.3); }
+.main-slider{ overflow: hidden; position: relative; }
+
+.main-slider .swiper-container{ overflow: visible; }
+
+.main-slider .category{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: 1; color: #fff; }
  
- 
+.main-slider .category:after{ content:''; position: absolute; top: 0; bottom: 0; left: 0; right: 0; z-index: -1; 
+	background: rgba(0,0,0,.4); } 
+
+
+/* SLIDER CONTROLER */
+
+.main-slider .swiper-button-prev, 
+.main-slider .swiper-button-next{ top: 0; bottom: 0; width: auto; margin: 0; background: none; font-size: 4em; 
+	top: 50%; margin-top: -50px; height: 100px; color: #fff; }
+
+.main-slider .swiper-button-prev{ left: 20px; }
+
+.main-slider .swiper-button-next{ right: 20px; }
+
  
 /* ---------------------------------
 5. SINGLE POST
@@ -153,9 +170,7 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 
 .blog-area{ text-align: center; background: #EDF3F3; }
 
-.blog-area .single-post{
-	 /* height: 100%;  */
-	position: relative;
+.blog-area .single-post{ height: 100%; position: relative; padding-bottom: 45px;
 	overflow: hidden; box-shadow: 0px 0px 5px rgba(0,0,0,.1); border: 1px solid #ddd; background: #fff; }
 
 .blog-area .single-post .title{ padding: 20px 30px 30px; }
@@ -182,6 +197,46 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 
 .post-style-1 .blog-image{ max-height: 200px; overflow: hidden; }
 
+
+
+/* ---------------------------------
+7. EXTRA BIG BLOG
+--------------------------------- */
+
+.blog-area .post-style-2{ padding-bottom: 0; text-align: left; }
+
+.blog-area .post-style-2 .title{ padding: 15px 0px 20px; }
+
+.post-style-2 .avatar-area{ padding: 25px 0 15px; position: relative; }
+
+.post-style-2 .avatar{ margin: 0px; }
+	
+.post-style-2 .avatar-area .right-area{ margin-left: 90px; position: absolute; top: 50%; transform: translateY(-50%); }
+
+.post-style-2 .blog-image{ width: 50%; float: left; height: 100%; }
+
+.post-style-2 .blog-image img{ height: 100%; width: 100%; }
+
+.post-style-2 .blog-info{ width: 50%; float: left; height: 100%; position: relative; padding: 30px; padding-bottom: 45px; }
+
+
+
+/* ---------------------------------
+8. EXTRA MEDIUM BLOG
+--------------------------------- */
+
+.post-style-2.post-style-3 .blog-info{ width: 100%; float: none; }
+
+
+
+/* ---------------------------------
+9. EXTRA SMALL BLOG
+--------------------------------- */
+
+.blog-area .post-style-4{ margin-bottom: 30px; }
+
+.display-table .display-table-cell.title{ padding: 30px; }
+
 .load-more-btn{ padding: 15px 40px; margin: 10px 0 30px; transition: all .3s; box-shadow: 0px 0px 2px rgba(0,0,0,.4);
 	background: #C3D8F5; }
 
@@ -190,60 +245,36 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 
 
 /* ---------------------------------
-7. INFO AREA
+10. FOOTER
 --------------------------------- */
 
-.blog-area .info-area{ height: auto; text-align: left; padding: 40px 0px; }
-
-.blog-area .info-area .title{ padding: 0; margin-bottom: 20px; }
-
-
-
-/* ABOUT AREA */
-
-.blog-area .info-area .about-area{ padding: 0 30px 30px; margin: 0 0 30px; border-bottom: 1px solid #eee; }
-
-
-
-/* SUBSCRIBE AREA */
-
-.info-area .subscribe-area{ padding: 0 30px 30px; margin: 0 0 30px; border-bottom: 1px solid #eee; }
-
-.info-area .input-area{ position: relative; height: 50px; width: 100%; box-shadow: 0px 0px 1px #bbb; background: #F5F7F6; }
-
-.info-area .input-area .email-input{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%;
-	padding: 0 70px 0 20px; background: transparent; border: 0; outline: 0; }
-
-.info-area .input-area .email-input:focus{ box-shadow: 0px 0px 1px #aaa; }
-
-
-
-
-/* TAG AREA */
-
-.info-area .tag-area{ padding: 0 30px; }
-
-.tag-area > ul > li > a{ padding: 7px 12px; float: left; margin: 0 5px 5px 0; border: 1px solid #eee; background: #F5F6F8; }
-
-.tag-area > ul > li > a:hover{ background: none; }
-
-
-/* ---------------------------------
-8. FOOTER
---------------------------------- */
-
-footer{ padding: 70px 0 30px; text-align: center; background: #fff; }
+footer{ padding: 70px 0 30px; background: #fff; }
 
 footer .footer-section{ margin-bottom: 40px; }
 
 footer .footer-section .title{ margin-bottom: 20px; }
 
-footer .footer-section ul > li{ margin: 0 5px; }
+footer .footer-section ul > li{ margin-right: 10px; margin-top: 10px; }
 
-footer .copyright{ margin: 10px 0 20px; }
+
+footer .copyright{ margin: 10px 0; }
+
 
 footer .icons > li > a{ height: 40px; width: 40px; border-radius: 40px; line-height: 40px; text-align: center; 
-	transition: all .3s; box-shadow: 0px 0px 2px rgba(0,0,0,1); background: #498BF9; color: #fff; }
+	transition: all .3s; font-size: 1.2em; box-shadow: 0px 0px 2px rgba(0,0,0,1); background: #498BF9; color: #fff; }
 
 footer .icons > li > a:hover{ transform: translateY(-2px); box-shadow: 5px 10px 20px rgba(0,0,0,.3); }
+
+
+footer .input-area{ position: relative; height: 50px; width: 100%; box-shadow: 0px 0px 1px #bbb; background: #F5F7F6; }
+
+footer .input-area .email-input{ position: absolute; top: 0; bottom: 0; left: 0; right: 0; width: 100%;
+	padding: 0 70px 0 20px; background: transparent; border: 0; outline: 0; }
+
+footer .input-area .email-input:focus{ box-shadow: 0px 0px 1px #aaa; }
+
+footer .input-area .submit-btn{ position: absolute; top: 0; bottom: 0; right: 0; width: 50px; background: none; 
+	border: 0; outline: 0; margin-right: 10px; opacity: .8; cursor: pointer; transition: all .2s; }
+
+
 
