--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -186,8 +186,13 @@
                   </div>
                 </form>
           </div>
-          <a href="#" class="nav-item nav-link">Login</a>
-          <a href="#" class="nav-item nav-link">Sign Up</a>
+
+          {% if request.user.is_authenticated %}
+          <a  class="nav-item nav-link" href="{% url 'authentication:logout' %}">Logout</a>
+      {% else %}
+          <a  class="nav-item nav-link" href="{% url 'authentication:login' %}">Login</a>
+      {% endif %}
+         
           <!-- <a href="#" class="nav-item nav-link"><i class="fa fa-google-plus"></i></a>
           <a href="#" class="nav-item nav-link"><i class="fa fa-pinterest-p"></i></a> -->
         </div>
