--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,15 +4,15 @@
         <div class="row align-items-center justify-content-xl-between">
           <div class="col-xl-6">
             <div class="text-center text-xl-left text-muted">
-              <a href="https://appseed.us/admin-dashboards/django" 
-                 class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+              <a href="#" 
+                 class="font-weight-bold ml-1" target="_blank">&copy; Copyright</a>
             </div>
           </div>
           <div class="col-xl-6">
             <div class="text-center text-xl-right text-muted">
-              <a href="https://bit.ly/3fKQZaL" 
-                 class="font-weight-bold ml-1" target="_blank"> &copy; Creative-Tim</a> 
-                 - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
+              <a href="javascript:void()" 
+                 class="font-weight-bold ml-1" target="_blank">  </a> 
+                Version <a target="_blank" href="#"></a>
             </div>
           </div>
         </div>
