--- a/apps/blog/templates/blog/author/article_update_form.html
+++ b/apps/blog/templates/blog/author/article_update_form.html
@@ -1,6 +1,6 @@
 {% extends "author_base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block title %}
  {{title}}
 {% endblock title %}
@@ -30,46 +30,7 @@
               novalidate>
             {% csrf_token %}
 
-                <div class="form-group">
-                           <label for="articleTitle">Article Title*</label>
-                                    <h6 class="text-danger">{{ article_update_form.title.errors }}</h6>
-                                    {{ article_update_form.title }}
-                              </div>
-                              <div class="form-group">
-                                <label for="articleCategory">Select Category*</label>
-                                  <h6 class="text-danger">{{ article_update_form.category.errors }}</h6>
-                                    {{ article_update_form.category }}
-                              </div>
-                              <div class="form-group">
-                                <label for="articleImage">Upload Article Image*</label>
-                                  <h6 class="text-danger">{{ article_update_form.image.errors }}</h6>
-                                  Current image: <a class="text-danger" href="{{ article.image.url }}">{{ article.image }}</a>
-                                    {{ article_update_form.image }}
-                              </div>
-                              <div class="form-group">
-                                <label for="image_credit">Image Credit</label>
-                                    <h6 class="text-danger">{{ article_update_form.image_credit.errors }}</h6>
-                                    {{ article_update_form.image_credit }}
-                              </div>
-                              <div class="form-group">
-                                  <label for="article-content">Content*</label>
-                                  <h6 class="text-danger">{{ article_update_form.body.errors }}</h6>
-                                  {{ article_update_form.body }}
-                              </div>
-                              <div class="form-group">
-                                <label for="tags">Enter Tags*</label>
-                                  <h6 class="text-danger">{{ article_update_form.tags.errors }}</h6>
-                                  <input type="text"  data-role="tagsinput"
-                                         class="form-control" id="tags" name="tags"
-                                         value="{% for tag in article.tags.all %}{{ tag }},{% endfor %}">
-                              <small id="hint_id_tags" class="form-text text-muted">
-                                  A comma-separated list of tags.</small>
-                              </div>
-                              <div class="form-group">
-                                <label for="articleImage">Status*</label>
-                                  <h6 class="text-danger">{{ article_update_form.status.errors }}</h6>
-                                   {{ article_update_form.status }}
-                              </div>
+            {{article_update_form|crispy}}
 
                 <div class="form-group float-right">
 
