--- a/apps/blog/templates/blog/category/category_articles.html
+++ b/apps/blog/templates/blog/category/category_articles.html
@@ -25,32 +25,36 @@ Categories
                     {% for article in articles %}
                     <div class="col-md-6 col-sm-12">
                         <div class="card h-100">
-                            <div class="single-post post-style-1">
-
-                                <div class="blog-image">
-                                    <img src="{{ article.image.url }}" width="330" height="220" alt="Blog Image">
-                                </div>
-
-                                <!-- <a class="avatar" href="{% url 'blog:author_articles' article.author.username %}"><img src="{{ article.author.profile.image.url }}"
-                                                            alt="Profile Image" class="profile-image">
-                            </a> -->
-
-                                <div class="blog-info mt-3">
-
-                                    <h4 class="title"><a href="{{ article.get_absolute_url }}"><b>{{ article.title}}</b></a>
-                                    </h4>
-
-                                    <ul class="post-footer">
-                                        <li><a><i class="fas fa-clock"></i>{{ article.read_time }}
-                                                min{{article.read_time|pluralize }} read</a></li>
-                                        <li><a><i class="fas fa-comment"></i>{{ article.comments.count }}</li></a>
-                                        <li><a><i class="fas fa-eye"></i>{{ article.views }}</li></a>
-                                    </ul>
-
-                                </div><!-- article-info -->
-                            </div><!-- single-post -->
-                        </div><!-- card -->
-                    </div><!-- col-lg-4 col-md-6 -->
+                            <img src="{{ article.image.url }}"
+                            width="330" height="220"
+                            alt="Blog Image">
+                            <div class="card-body bg-white">
+                              <p class="card-title text-sm">
+                                {{article.date_published}}
+                              </p>
+                              <h5 class="card-text">
+                                <a href="{{ article.get_absolute_url }}">
+                                    <b>{{ article.title }}</b></a>
+                                </h5>
+                                <hr>
+                                <div class="d-flex justify-content-between">
+                                    <div>
+                                        <i class="ion-ios-clock"></i> {{ article.read_time }} min read
+    
+                                    </div>
+                                    <div>
+                                    <i class="ion-chatbubble"></i> {{ article.comments.count }} comments
+    
+                                    </div>
+                                    <div>
+                                    <i class="ion-eye"></i> {{ article.views }} views
+    
+                                    </div>
+                                    </div>
+                            </div>
+                        </div>
+                    
+                    </div><!-- col-md-6 col-sm-12 -->
 
                     {% endfor %}
                 </div><!-- row -->
@@ -120,16 +124,11 @@ Categories
                     </div> -->
                     <div class="tag-area">
 
-                        <h4 class="title"><b>TAG CLOUD</b></h4>
-                        <ul>
-                            <li><a href="#">Manual</a></li>
-                            <li><a href="#">Liberty</a></li>
-                            <li><a href="#">Recomendation</a></li>
-                            <li><a href="#">Interpritation</a></li>
-                            <li><a href="#">Manual</a></li>
-                            <li><a href="#">Liberty</a></li>
-                            <li><a href="#">Recomendation</a></li>
-                            <li><a href="#">Interpritation</a></li>
+                        <h4 class="title"><b>ARTICLES TAGS</b></h4>
+                        <ul class="tags">
+                            {% for tag in tags %}
+                            <li><a  class="badge text-uppercase text-white" style="background-color: #5E72E4;" href="javascript:void(0)">{{ tag }}</a></li>
+                            {% endfor %}
                         </ul>
 
                     </div><!-- subscribe-area -->
@@ -143,5 +142,19 @@ Categories
     </div><!-- container -->
 
 </section><!-- section -->
-
+<style>
+	.card {
+		position: relative;
+		width: 20rem;
+		height:100%;
+		overflow: hidden;
+		border-radius: 15px;
+		margin: 0 auto;
+		box-shadow: 0 10px 15px rgba(0,0,0,0.3);
+		transition: .5s;
+	  }
+	  .card:hover {
+		transform:scale(1.1);
+	  }
+</style>
 {% endblock content %}
