--- a/apps/static/assets/css/blog/front-page-category/styles.css
+++ b/apps/static/assets/css/blog/front-page-category/styles.css
@@ -248,7 +248,7 @@ header .src-area .src-btn{ position: absolute; top: 0; bottom: 0; left: 0; width
 10. FOOTER
 --------------------------------- */
 
-footer{ padding: 70px 0 30px; background: #fff; }
+footer{ padding: 20px 0 30px; background: #fff;margin:0px 129px }
 
 footer .footer-section{ margin-bottom: 40px; }
 
