--- a/templates/account_base.html
+++ b/templates/account_base.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon">
+  <!-- <link rel="canonical" href="https://appseed.us/admin-dashboards/django-dashboard-argon"> -->
   
   <title>
    {{title}}
@@ -32,7 +32,7 @@
     {% include "includes/navigation-fullscreen.html" %}
 
     <!-- Header -->
-    <div class="header bg-gradient-primary py-7 py-lg-8">
+    <div class="header bg-gradient-primary">
       <div class="container">
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
