--- a/apps/authentication/templates/authentication/login.html
+++ b/apps/authentication/templates/authentication/login.html
@@ -8,24 +8,21 @@
 {% block content %}
 
     <!-- Page content -->
-    <div class="container mt--8 pb-5">
+    <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-5 col-md-7">
           <div class="card bg-secondary shadow border-0">
-            <div class="card-header bg-transparent pb-5">
-              <div class="text-muted text-center mt-2 mb-3">
-                Sign IN
+            <div class="card-header bg-transparent pb-3">
+              <div class="text-muted text-center">
+               <strong>Login</strong>
               </div>
             </div>
-            <div class="card-body px-lg-5 py-lg-5">
+            <div class="card-body px-lg-5 pb-lg-5">
               <div class="text-center text-muted mb-4">
 
                 {% if msg %}
                   <p>{{ msg }}</p>
-                {% else %}
-                  <p>
-                    Add your credentials
-                  </p>
+               
                 {% endif %}  
 
               </div>
@@ -56,20 +53,21 @@
                     <span class="text-muted">Remember me</span>
                   </label>
                 </div>
-                <div class="text-center">
-                  <button type="submit" class="btn btn-primary my-4">Sign in</button>
+                <div class="">
+                  <button type="submit" class="btn btn-block btn-primary my-3"> Login</button>
                 </div>
               </form>
+              <div class="row mt-3">
+                <div class="col-6">
+                  <a href="{% url 'authentication:register' %}"><small>Register</small></a>
+                </div>
+                <div class="col-6 text-right">
+                  <a href=""><small>Forget Password</small></a>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="row mt-3">
-            <div class="col-6">
-              <a href="{% url 'authentication:register' %}" class="text-light"><small>Register</small></a>
-            </div>
-            <div class="col-6 text-right">
-              <a href="https://appseed.us/support" class="text-light"><small>Get Support</small></a>
-            </div>
-          </div>
+        
         </div>
       </div>
     </div>
