--- a/apps/blog/templates/blog/article/article_detail.html
+++ b/apps/blog/templates/blog/article/article_detail.html
@@ -182,44 +182,27 @@
 	</section>
 
 	<section class="comment-section center-text">
-		<div class="container">
-			<h4><b>POST COMMENT</b></h4>
-			<div class="row">
-
-				<div class="col-lg-2 col-md-0"></div>
-
-				<div class="col-lg-8 col-md-12">
-					<div class="comment-form">
-						<form method="post" action="{% url 'blog:comment_create' article.slug %}">
-                            {% csrf_token %}
-							<div class="row">
-								<div class="col-sm-6">
-									{{ comment_form.name }}
-								</div><!-- col-sm-6 -->
-								<div class="col-sm-6">
-									{{ comment_form.email }}
-								</div><!-- col-sm-6 -->
-
-								<div class="col-sm-12">
-                                    {{ comment_form.comment }}
-								</div><!-- col-sm-12 -->
-								<div class="col-sm-12">
-									<button class="submit-btn" type="submit" id="form-submit"><b>POST COMMENT</b></button>
-								</div><!-- col-sm-12 -->
-
-							</div><!-- row -->
-						</form>
-					</div><!-- comment-form -->
-
-
-                    <a class="more-comment-btn" href="{% url 'blog:article_comments' article.slug %}">
-                        <b>SEE COMMENTS ({{ article.comments.count }})</b></a>
-
-				</div><!-- col-lg-8 col-md-12 -->
-
-
-			</div><!-- row -->
-
+		<div class="container bg-white">
+		
+			<div id="disqus_thread"></div>
+			<script>
+				/**
+				*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+				*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+				/*
+				var disqus_config = function () {
+				this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+				this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+				};
+				*/
+				(function() { // DON'T EDIT BELOW THIS LINE
+				var d = document, s = d.createElement('script');
+				s.src = 'https://study-better-way.disqus.com/embed.js';
+				s.setAttribute('data-timestamp', +new Date());
+				(d.head || d.body).appendChild(s);
+				})();
+			</script>
+			<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
 		</div><!-- container -->
 	</section>
 	{% include "includes/blog_footer.html" %}
