--- a/templates/includes/footer-fullscreen.html
+++ b/templates/includes/footer-fullscreen.html
@@ -5,16 +5,16 @@
           <div class="col-xl-6">
             <div class="copyright text-center text-xl-left text-muted">
                 <a target="_blank" 
-                   href="https://appseed.us/admin-dashboards/django" 
-                   class="font-weight-bold ml-1" target="_blank">More Dashboards</a>
+                   href="" 
+                   class="font-weight-bold ml-1" target="_blank">Footer</a>
             </div>
           </div>
-          <div class="col-xl-6">
+          <!-- <div class="col-xl-6">
             <div class="text-center text-xl-right text-muted">
                &copy; <a target="_blank" 
-                         href="https://bit.ly/3fKQZaL">Creative-Tim</a> 
-               - coded by <a target="_blank" href="https://appseed.us">AppSeed</a>
-            </div>
+                         href="https://bit.ly/3fKQZaL">Copyright</a> 
+                <a target="_blank" href="">Version</a>
+            </div> -->
           </div>
         </div>
       </div>
