--- a/templates/includes/navigation-fullscreen.html
+++ b/templates/includes/navigation-fullscreen.html
@@ -1,7 +1,10 @@
 <nav id="navbar-main" class="navbar navbar-horizontal navbar-transparent navbar-main navbar-expand-lg navbar-light">
   <div class="container">
-    <a class="navbar-brand" href="/">
-      <img src="/static/assets/img/brand/white.png" alt="Argon Design - Template Starter Logo.">
+    <a class="navbar-brand text-white" href="{% url 'blog:home' %}">
+      <span>
+      E-StudyBlog
+
+      </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar-collapse" aria-controls="navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -10,8 +13,8 @@
       <div class="navbar-collapse-header">
         <div class="row">
           <div class="col-6 collapse-brand">
-            <a href="/">
-              <img src="/static/assets/img/brand/blue.png">
+            <a href="{% url 'blog:home' %}">
+             E-StudyBlog
             </a>
           </div>
           <div class="col-6 collapse-close">
@@ -35,31 +38,31 @@
         </li>
       </ul>
       <hr class="d-lg-none" />
-      <ul class="navbar-nav align-items-lg-center ml-lg-auto">
+      <!-- <ul class="navbar-nav align-items-lg-center ml-lg-auto">
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://www.facebook.com/webappseed" 
+          <a class="nav-link nav-link-icon" href="#" 
              target="_blank" data-toggle="tooltip" data-original-title="Like us on Facebook">
             <i class="fab fa-facebook-square"></i>
             <span class="nav-link-inner--text d-lg-none">Facebook</span>
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-link-icon" href="https://twitter.com/webappseed" 
+          <a class="nav-link nav-link-icon" href="" 
              target="_blank" data-toggle="tooltip" data-original-title="Follow us on Twitter">
             <i class="fab fa-twitter-square"></i>
             <span class="nav-link-inner--text d-lg-none">Twitter</span>
           </a>
         </li>
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="https://appseed.us/admin-dashboards/django-dashboard-argon-pro" 
+          <a href="#" 
              target="_blank" class="btn btn-neutral btn-icon">
             <span class="btn-inner--icon">
               <i class="fas fa-rocket mr-2"></i>
             </span>
-            <span class="nav-link-inner--text">PRO Version</span>
+            <span class="nav-link-inner--text"></span>
           </a>
         </li>
-      </ul>
+      </ul> -->
     </div>
   </div>
 </nav>
