--- a/templates/includes/blog_navbar.html
+++ b/templates/includes/blog_navbar.html
@@ -149,7 +149,7 @@
 
     <nav class="navbar navbar-expand-lg">
       <div class="title">
-        <a href="{% url 'blog:home' %}" class="text-white navbar-brand">E - <b>StudyBlog</b></a>
+        <a href="{% url 'blog:home' %}" class="text-white navbar-brand"><b>Study Better Way</b></a>
 
       </div>
       <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
