--- a/templates/includes/navigation-fullscreen.html
+++ b/templates/includes/navigation-fullscreen.html
@@ -2,7 +2,7 @@
   <div class="container">
     <a class="navbar-brand text-white" href="{% url 'blog:home' %}">
       <span>
-      E-StudyBlog
+      Study Better Way
 
       </span>
     </a>
@@ -14,7 +14,7 @@
         <div class="row">
           <div class="col-6 collapse-brand">
             <a href="{% url 'blog:home' %}">
-             E-StudyBlog
+             Study Better Way
             </a>
           </div>
           <div class="col-6 collapse-close">
